fix: format font-family declaration for improved readability

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -65,8 +65,15 @@ body,
 input,
 select,
 textarea {
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
-    Arial, "Open Sans", sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    "Open Sans",
+    sans-serif;
   line-height: 24px;
 }
 
